# IOT-Metronome

./: README.md
part1/: CMakeLists.txt  main.cpp  metronome.cpp  metronome.hpp
part2/: index.html  script.js
